Notebook Álgebra Linear

--- a/ml_pln_01.ipynb
+++ b/ml_pln_01.ipynb
@@ -3,7 +3,9 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "authorship_tag": "ABX9TyOk9WamY+y1dim1LkgTK+bv",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -14,6 +16,16 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/LeoSousaJesus/semana_machine_learning/blob/main/ml_pln_01.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "markdown",
       "source": [
@@ -29,7 +41,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 43,
       "metadata": {
         "id": "OiCN1dUbqGli"
       },
@@ -55,7 +67,7 @@
       "metadata": {
         "id": "b4rlNCO5uFvU"
       },
-      "execution_count": 19,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -68,7 +80,7 @@
       "metadata": {
         "id": "4tzgFU4jwhaY"
       },
-      "execution_count": 18,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -113,7 +125,7 @@
       "metadata": {
         "id": "DC_YN2hCx3Nl"
       },
-      "execution_count": 20,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -133,7 +145,7 @@
       "metadata": {
         "id": "cRBSChRO0GpJ"
       },
-      "execution_count": 29,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -147,9 +159,9 @@
           "height": 35
         },
         "id": "WK44qP_JARb6",
-        "outputId": "04cc2ec8-5d35-4ebf-b0e3-67437c6a17af"
+        "outputId": "5d25875b-e6c7-4a59-a79b-bd472eba8c49"
       },
-      "execution_count": 30,
+      "execution_count": 23,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -162,34 +174,34 @@
             }
           },
           "metadata": {},
-          "execution_count": 30
+          "execution_count": 23
         }
       ]
     },
     {
       "cell_type": "code",
       "source": [
-        "verifica_equacao_1 = lambda x : pow(x,1)"
+        "verifica_equacao = lambda x : pow(x,1)"
       ],
       "metadata": {
         "id": "j9Eq_XkuBBHp"
       },
-      "execution_count": 36,
+      "execution_count": 24,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "print(vefifica_equacao_1(2))"
+        "print(verifica_equacao(2))"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "0kv3BICjAiih",
-        "outputId": "31dd508a-bc61-4795-c8cc-c4e5ddcefdd5"
+        "outputId": "925ef21d-9157-4d1b-95c9-fbb303f18ddb"
       },
-      "execution_count": 37,
+      "execution_count": 28,
       "outputs": [
         {
           "output_type": "stream",
@@ -231,9 +243,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "6VtmUZWtBJbI",
-        "outputId": "815f2ff1-b2d9-4e2c-cf98-2d8ba314f387"
+        "outputId": "7d3375db-01cf-486a-e33b-387a52f4cb03"
       },
-      "execution_count": 40,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "stream",
@@ -247,30 +259,27 @@
     {
       "cell_type": "code",
       "source": [
-        "verifica_equacao(2,2)"
+        "verifica_equacao = lambda x, y : pow(x,y)\n",
+        "verifica_equacao(2,3)"
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 35
+          "base_uri": "https://localhost:8080/"
         },
         "id": "g4VM6Z9MEIYh",
-        "outputId": "10176f53-e6ac-49e6-dfba-a11fb5739fb1"
+        "outputId": "d98520a0-491b-4c52-ac51-634ed00d319e"
       },
-      "execution_count": 41,
+      "execution_count": 33,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "' resposta da potência: 4 - equação não linear'"
-            ],
-            "application/vnd.google.colaboratory.intrinsic+json": {
-              "type": "string"
-            }
+              "8"
+            ]
           },
           "metadata": {},
-          "execution_count": 41
+          "execution_count": 33
         }
       ]
     },
@@ -287,28 +296,28 @@
       "metadata": {
         "id": "aUIjobtGFo5z"
       },
-      "execution_count": 43,
+      "execution_count": 17,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "print(f\"a raiz quadrada de x é: {raiz_quadrada(25)}\")"
+        "print(f\"a raiz quadrada de x é: {raiz_quadrada(256)}\")"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "m8VXzs2RGnF7",
-        "outputId": "110fa614-d649-4cd4-c91a-4606aba401b9"
+        "outputId": "591846f3-4d5f-4309-dd07-f3c60a1a4f49"
       },
-      "execution_count": 44,
+      "execution_count": 36,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "a raiz quadrada de x é: 5.0\n"
+            "a raiz quadrada de x é: 16.0\n"
           ]
         }
       ]
@@ -343,9 +352,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "LKvaNF9EHjXP",
-        "outputId": "6c43738f-d85f-45a1-f038-a52094ff4bb6"
+        "outputId": "1a6808c0-bf32-4c13-9490-bf15022881d7"
       },
-      "execution_count": 46,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "stream",
@@ -369,15 +378,82 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "bqmksBESHw5W",
-        "outputId": "100d5dab-3286-4671-e94c-c166f9f7ad13"
+        "outputId": "c4f60c34-56dd-4a80-88f9-7d8947f9ef3e"
       },
-      "execution_count": 47,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Resultado: 5.0\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# prompt: Considere a função criada anteriormente da raiz quadrada e crie duas versões multiparadigma: uma solução com orientação a objetos e uma classe que terá o nome de Matemática, e outra solução usando lambda e ai você define o nome.\n",
+        "\n",
+        "import math\n",
+        "\n",
+        "class Matematica:\n",
+        "  def __init__(self, x):\n",
+        "    self.x = x\n",
+        "\n",
+        "  def raiz_quadrada(self):\n",
+        "    return math.sqrt(self.x) # math - biblioteca sqtr\n",
+        "  def calcular_fatorial(self):\n",
+        "    return math.factorial(self.x)\n",
+        "  def angulo(self):\n",
+        "    return math.radians(self.x)\n",
+        "\n",
+        "# Solução com Orientação a Objetos\n",
+        "matematica = Matematica(5)\n",
+        "resultado_oo = matematica.raiz_quadrada()\n",
+        "print(f\"Resultado: {resultado_oo}\")\n",
+        "\n",
+        "print(f\"O fatorial de x é: {matematica.calcular_fatorial()}\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "4gOvwtrENtsE",
+        "outputId": "24334e77-e1e7-4d5b-eced-b610ee5fd5ce"
+      },
+      "execution_count": 41,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Resultado: 2.23606797749979\n",
+            "O fatorial de x é: 120\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(f\"O fatorial de x é: {matematica.calcular_fatorial()}\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "mlqVBLjTNxpb",
+        "outputId": "124f7bf2-fe45-4f8a-ef18-de03a0eabdfe"
+      },
+      "execution_count": 42,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "O fatorial de x é: 120\n"
           ]
         }
       ]
